--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "inv-mannager",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Manejo General De Inventario De Sirio Dinar",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./bin/www.js | bunyan"
+    "build": "webpack -p",
+    "start": "node ./dist/main.js",
+    "dev:start": "nodemon --exec babel-node ./bin/www.js | bunyan"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["inventario", "siriodinar"],
+  "author": "Tac Etarip",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-node-externals": "^2.5.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
@@ -29,5 +35,8 @@
     "multer": "^1.4.2",
     "throng": "^4.0.0",
     "tinify": "^1.6.0-beta.2"
+  },
+  "engines": {
+    "node": "12.18.x"
   }
 }
