--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node ./dist/main.js",
     "dev:start": "nodemon --exec babel-node ./bin/www.js | bunyan"
   },
-  "keywords": ["inventario", "siriodinar"],
+  "keywords": [
+    "inventario",
+    "siriodinar"
+  ],
   "author": "Tac Etarip",
   "license": "ISC",
   "devDependencies": {
@@ -21,6 +24,7 @@
     "webpack-node-externals": "^2.5.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.713.0",
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -33,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "throng": "^4.0.0",
     "tinify": "^1.6.0-beta.2"
   },
