--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inv-mannager",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Manejo General De Inventario De Sirio Dinar",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.713.0",
+    "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -38,6 +39,7 @@
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "pdfkit": "^0.11.0",
     "throng": "^4.0.0",
     "tinify": "^1.6.0-beta.2"
   },
