--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inv-mannager",
-  "version": "0.1.0",
+  "version": "1.5.0",
   "description": "Manejo General De Inventario De Sirio Dinar",
   "main": "index.js",
   "scripts": {
@@ -40,7 +40,13 @@
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.4.17",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.11.0",
+    "replace-in-file": "^6.1.0",
     "throng": "^5.0.0",
     "tinify": "^1.6.0-beta.2"
   },
