--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.17.1",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^1.26.0",
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
