--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.11.0",
+    "pdfmake": "^0.1.70",
     "replace-in-file": "^6.1.0",
     "throng": "^5.0.0",
     "tinify": "^1.6.0-beta.2"
