--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "excel4node": "^1.7.2",
