--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "excel4node": "^1.7.2",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
+    "imagemin": "^7.0.1",
+    "imagemin-webp": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.26.0",
     "mongoose": "^5.9.18",
