--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "imagemin-webp": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.26.0",
-    "mongoose": "^5.9.18",
+    "mongoose": "^5.12.14",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-fetch": "^2.6.1",
@@ -52,6 +52,7 @@
     "pdfkit": "^0.11.0",
     "pdfmake": "^0.1.70",
     "replace-in-file": "^6.1.0",
+    "sitemap": "^7.0.0",
     "throng": "^5.0.0",
     "tinify": "^1.6.0-beta.2"
   },
