--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "pdfmake": "^0.1.70",
     "replace-in-file": "^6.1.0",
     "sitemap": "^7.0.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "throng": "^5.0.0",
     "tinify": "^1.6.0-beta.2"
   },
