--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.26.0",
     "mongoose": "^5.12.14",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-fetch": "^2.6.1",
