--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Manejo General De Inventario De Sirio Dinar",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -p",
+    "build": "webpack --mode=production",
     "start": "node ./dist/main.js",
     "dev:start": "nodemon --exec babel-node ./bin/www.js | bunyan"
   },
@@ -15,40 +15,44 @@
   "author": "Tac Etarip",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/node": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.23.3",
+    "@babel/node": "^7.22.19",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "core-js": "^3.33.2",
     "eslint": "^7.30.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-node-externals": "^2.5.0"
+    "nodemon": "^3.0.1",
+    "regenerator-runtime": "^0.14.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.1036.0",
-    "axios": "^0.21.4",
-    "babel-polyfill": "^6.26.0",
+    "@aws-sdk/client-s3": "^3.450.0",
+    "axios": "^1.6.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.3.1",
     "excel4node": "^1.7.2",
-    "express": "^4.17.1",
-    "helmet": "^3.23.3",
-    "imagemin": "^7.0.1",
-    "imagemin-webp": "^6.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "imagemin": "^8.0.1",
+    "imagemin-webp": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^1.26.0",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "multer-s3": "^2.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.17",
-    "passport": "^0.4.1",
+    "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.11.0",
@@ -58,9 +62,6 @@
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "throng": "^5.0.0",
-    "tinify": "^1.6.0-beta.2"
-  },
-  "engines": {
-    "node": "12.18.x"
+    "tinify": "^1.7.1"
   }
 }
