--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pdfkit": "^0.11.0",
     "pdfmake": "^0.1.70",
     "replace-in-file": "^6.1.0",
+    "sharp": "^0.33.1",
     "sitemap": "^7.0.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
