--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.23.3",
-    "babel-loader": "^9.1.3",
-    "core-js": "^3.35.0",
-    "@babel/plugin-transform-runtime": "^7.23.3",
     "@aws-sdk/client-s3": "^3.450.0",
-    "regenerator-runtime": "^0.14.0",
+    "@babel/plugin-transform-runtime": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
     "axios": "^1.6.1",
+    "babel-loader": "^9.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.14",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "core-js": "^3.35.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "excel4node": "^1.7.2",
@@ -46,6 +45,8 @@
     "imagemin-webp": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^1.26.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.44",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -57,6 +58,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.11.0",
     "pdfmake": "^0.1.70",
+    "regenerator-runtime": "^0.14.0",
     "replace-in-file": "^6.1.0",
     "sharp": "^0.33.1",
     "sitemap": "^7.0.0",
